[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/entities/player/NetworkPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/battle/characters/Rogue/RogueAnim.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/entities/weapons/NetworkWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/SpecialElite-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="CapsuleShape2D" id=5]
radius = 22.6226
height = 54.8264

[sub_resource type="CapsuleShape2D" id=6]
radius = 25.5956
height = 59.5832

[sub_resource type="CapsuleShape2D" id=4]
radius = 45.8743
height = 94.5403

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 4 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprites" type="Node2D" parent="."]

[node name="Anim" parent="Sprites" instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -24 )
rotation = 1.5708
shape = SubResource( 5 )

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 0, -80 )

[node name="NetworkWeapon" parent="Weapon" instance=ExtResource( 3 )]

[node name="PushBox" type="Area2D" parent="." groups=["pushbox"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushBox"]
position = Vector2( 0, -24 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -97 )
shape = SubResource( 4 )

[node name="Name" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.5
margin_top = -244.5
margin_right = 40.5
margin_bottom = -219.5
custom_fonts/font = SubResource( 7 )
text = "Player"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="PushBox" to="." method="_on_PushBox_area_entered"]
[connection signal="area_exited" from="PushBox" to="." method="_on_PushBox_area_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
